Fixes overflow issues
Utilising width’s over 100% and negative left offsets were triggering hoz scrollbars.

Also added a patch for the Block insertion point offsets which were triggering scrollbars due to their overhanging -1px indent.

--- a/packages/block-library/src/section/editor.scss
+++ b/packages/block-library/src/section/editor.scss
@@ -2,6 +2,14 @@
  * Section: All Alignment Settings
  */
 .wp-block[data-type="core/section"] {
+
+	// Ensure not rendering outside the element
+	// as -1px causes overflow-x scrollbars
+	.editor-block-list__insertion-point {
+		left: 0;
+		right: 0;
+	}
+
 	// Only applied when background is added to cancel out padding
 	> .editor-block-list__block-edit > div > .wp-block-section.has-background > .editor-inner-blocks {
 		margin-top: -#{$block-padding*2 + $block-spacing};
@@ -35,22 +43,25 @@
 	> .editor-block-list__block-edit > div > .wp-block-section > .editor-inner-blocks {
 		margin-left: auto;
 		margin-right: auto;
-		padding-left: $block-padding*3 + $block-spacing + $border-width;
-		padding-right: $block-padding*3 + $block-spacing + $border-width;
+		padding-left: 0;
+		padding-right: 0;
+
+		> .editor-block-list__layout {
+			margin-left: 0;
+			margin-right: 0;
+		}
 	}
 
 	// Full Width Blocks
 	// specificity required to only target immediate child Blocks of Section
 	> .editor-block-list__block-edit > div > .wp-block-section > .editor-inner-blocks > .editor-block-list__layout > .wp-block[data-align="full"] {
-
-		// we "pull" full width blocks out a little further when within a full width section
 		padding-right: 0;
 		padding-left: 0;
-		width: calc(100% + #{$block-padding*6 + $block-spacing*2 + $border-width*2});
-		left: -#{$block-padding*3 + $block-spacing + $border-width};
+		left: 0;
+		width: 100%;
 		max-width: none;
 
-		// Allow to abutt the edges of the canvas
+		// Allow to be flush with the edges of the canvas
 		> .editor-block-list__block-edit {
 			margin-left: 0;
 			margin-right: 0;
